Fix arrow & h1 on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,7 +110,9 @@ body p {
 
   }
 
-
+  h1 {
+  	font-size: 80%; 
+  }
 
   #myDesigns {
   	display: none;
@@ -130,8 +132,8 @@ body p {
 	align-items: center;
 	margin-bottom: 12vh;
     width: 100%;
-    height: 70vh;
-    overflow: hidden; 
+    height: 60vh;
+    overflow: hidden;
 
   }
     
